<resources>
    <string name="app_name">Riddlers</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="Registration">Register</string>
    <string name="retypePass">Re-type your password</string>
</resources>